[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retmodeler"
version = "0.0.1"
authors = [
  { name="Sugato Bagchi", email="bagchis@gmail.com" },
]
description = "A package to model assets, incomes, and expenses during retirement in the US."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "seaborn",
  "jupyter",
  "ipywidgets"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"